--- a/app/src/main/res/layout/ac.xml
+++ b/app/src/main/res/layout/ac.xml
@@ -3,22 +3,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:paddingTop="32dp"
-    android:paddingLeft="32dp"
-    android:paddingRight="32dp">
+    android:background="@color/grey1">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:id="@+id/imagetile"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_gravity="center"
-        android:src="@drawable/ac" />
-
+        android:scaleType="centerCrop"
+        android:background="@color/grey1"
+        android:src="@drawable/ic_ac_off"
+        />
     <TextView
+        android:id="@+id/texttile"
         android:textColor="@color/grey2"
-        android:text="Air Conditioner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"/>
+        android:layout_gravity="bottom|center"
+        android:text="balcony"
+        android:textSize="8dp"
+        android:paddingBottom="16dp"
+        />
 
 </FrameLayout>
