--- a/app/src/main/res/layout/balcony_light_tile.xml
+++ b/app/src/main/res/layout/balcony_light_tile.xml
@@ -3,19 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:layout_marginLeft="8dp"
-    android:layout_marginBottom="40dp"
-    android:layout_marginTop="4dp">
+    android:background="@color/grey1">
 
     <ImageButton
         android:id="@+id/imagetile"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_gravity="center"
         android:scaleType="centerCrop"
-        android:background="@color/white"
-        android:src="@drawable/bulb_off"
+        android:background="@color/grey1"
+        android:src="@drawable/ic_bulb_off"
         />
     <TextView
         android:id="@+id/texttile"
