--- a/app/src/main/res/layout/fan.xml
+++ b/app/src/main/res/layout/fan.xml
@@ -3,28 +3,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:layout_marginLeft="8dp"
-    android:layout_marginBottom="40dp"
-    android:layout_marginTop="4dp">
+    android:background="@color/grey1">
 
     <ImageButton
         android:id="@+id/imagetile"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_gravity="center"
         android:scaleType="centerCrop"
-        android:background="@color/white"
-        android:src="@drawable/fan"
+        android:background="@color/grey1"
+        android:src="@drawable/ic_fan_off"
         />
-
     <TextView
         android:id="@+id/texttile"
         android:textColor="@color/grey2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:text="Fan"
+        android:text="fan"
         android:textSize="8dp"
         android:paddingBottom="16dp"
         />
